<resources>
    <string name="app_name">Ez Calculator</string>
    <string name="output">Output</string>
    <string name="hint_first_number">Enter first number</string>
    <string name="hint_second_number">Enter second number</string>
    <string name="addition">Add</string>
    <string name="subtraction">Subtract</string>
    <string name="multiplication">Multiply</string>
    <string name="division">Divide</string>
</resources>