<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="#FFFFD9">

    <!-- Output box to take up more space -->
    <TextView
        android:id="@+id/output_box"
        android:layout_width="match_parent"
        android:layout_height="353dp"
        android:background="#FEFFAF"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/output"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#000000"/>

    <!-- Input text areas for numbers -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_first_number"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_margin="8dp"
            android:autofillHints="number"
            android:backgroundTint="#000000"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_first_number"
            android:textColorHint="#000000"
            android:inputType="numberDecimal"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edittext_second_number"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="8dp"
            android:autofillHints="number"
            android:backgroundTint="#000000"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_second_number"
            android:textColorHint="#000000"
            android:inputType="numberDecimal"
            android:textColor="#000000" />

    </LinearLayout>

    <!-- GridLayout to take up the remaining space for buttons -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="166dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="2">

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:backgroundTint="#403AC0"
            android:fontFamily="sans-serif"
            android:text="@string/addition"
            android:textStyle="bold"
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/button_subtract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:backgroundTint="#403AC0"
            android:fontFamily="sans-serif"
            android:text="@string/subtraction"
            android:textStyle="bold"
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:backgroundTint="#403AC0"
            android:fontFamily="sans-serif"
            android:text="@string/multiplication"
            android:textStyle="bold"
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/button_divide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:backgroundTint="#403AC0"
            android:fontFamily="sans-serif"
            android:text="@string/division"
            android:textStyle="bold"
            android:textColor="#ffffff"/>

    </GridLayout>
</LinearLayout>
